CHANGELOG
=========

CLIENT
[11:43AM 5/2/2013]
	- removed client-sided username checks and made them server-side instead
[11:32AM 5/2/2013]
	- added version checking
[9:26PM 5/1/2013]
	- added header comments to all files
[2:15PM 4/30/2013]
	- added authentication support to client
	- added login credentials dialog window to client GUI
[10:15PM 4/29/2013]
	- refactored into org.pavlinic.chat.client for client-specific features
[7:43PM 7/29/2012]
	- temporarily changed client-side username check to if statement (double ':s')
	- client will reject usernames longer than 16 characters
[6:20PM 7/28/2012]
	- the GUI client now allows users to set name before connecting to a server 
[4:48PM 7/28/2012]
	- began working on disallowed characters in username (client-sided for now :s)
[8:22PM 7/27/2012]
	- renamed 'cg' variable to 'isGUI'
	- console and gui clients now both share the same 'connecting to server' message
[9:12PM 7/26/2012]
	- GUI client will no longer give the console-mode "/logout and /quit" message
	- GUI client can no longer be resized (for the time being, at least)
[4:59 PM 7/25/2012]
	- client will no longer send blank messages

SERVER
[10:44PM 5/16/2013]
	- file and directory I/O is now more friendly towards non-Windows platforms
[8:12PM 5/13/2013]
	- server log now has timestamps again
[8:04PM 5/13/2013]
	- /account password now works
	- /account commands no longer show up "raw" in the server console (i.e. password is not displayed)
[5:42PM 5/12/2013]
	- added /motd
[9:54PM 5/11/2013]
	- moved a lot of the login code to individual functions
[5:03PM 5/11/2013]
	- added MOTD support
[3:15PM 5/11/2013]
	- removed ServerBot since it wasn't really being used
[3:06PM 5/11/2013]
	- added /msg support to privately message another user
	- updated writeMsg() to include the time by default
[2:27PM 5/11/2013]
	- text areas in the GUI server now automatically scroll if necessary
[12:02AM 5/11/2013]